--- a/web-peliculas/src/pages/MovieDetails.css
+++ b/web-peliculas/src/pages/MovieDetails.css
@@ -4,6 +4,12 @@
     flex-wrap: wrap;
 }
 
+.trailer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .col{
     max-width: 400px;
     margin: 15px;
